env fixes docker

--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,9 @@ EMBED_STATIC=false
 EMBED_TEMPLATES=false
 
 # Database postgres,mysql,sqlite(default if empty)
-DB_TYPE=sqlite 
-DB_NAME=db
-DB_DSN=user:password@localhost:[PORT]
+#DB_TYPE=postgres 
+#DB_NAME=pg
+#DB_DSN=postgres:strongPass@localhost:5444
 
 # SMTP
 SMTP_EMAIL=example@gmail.com
@@ -15,5 +15,5 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 
 
-# docker run -d --name postgres -p 5444:5432 -e "POSTGRES_PASSWORD=strongPass" -e "POSTGRES_DB=DB_NAME" postgres
-# docker run -d --name mysql -p 3333:3306 -e "MYSQL_ROOT_PASSWORD=strongPass" -e "MYSQL_DATABASE=DB_NAME" mysql
+# docker run -d --name postgres -p 5444:5432 -e "POSTGRES_PASSWORD=strongPass" -e "POSTGRES_DB=pg" postgres
+# docker run -d --name mysql -p 3333:3306 -e "MYSQL_DATABASE=db" -e "MYSQL_USER=test" -e "MYSQL_PASSWORD=strongPass" -e "MYSQL_ROOT_PASSWORD=rootPass"  mysql
