--- a/.env.example
+++ b/.env.example
@@ -15,5 +15,5 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 
 
-# docker run -d --name postgres -p 5444:5432 -e "POSTGRES_PASSWORD=strongPass" -e "POSTGRES_DB=pg" postgres
-# docker run -d --name mysql -p 3333:3306 -e "MYSQL_DATABASE=db" -e "MYSQL_USER=test" -e "MYSQL_PASSWORD=strongPass" -e "MYSQL_ROOT_PASSWORD=rootPass"  mysql
+# docker run --name postgres -p 5444:5432 -e "POSTGRES_PASSWORD=strongPass" -e "POSTGRES_DB=DB_NAME" -d postgres:latest
+# docker run --name mysql -p 3333:3306 -e "MYSQL_DATABASE=db" -e "MYSQL_USER=test" -e "MYSQL_PASSWORD=strongPass" -e "MYSQL_ROOT_PASSWORD=rootPass" -d  mysql:latest
