--- a/.env.example
+++ b/.env.example
@@ -3,17 +3,12 @@ SECRET=any_long-secret-key_here
 EMBED_STATIC=false
 EMBED_TEMPLATES=false
 
-# Database postgres,mysql,sqlite(default if empty)
+# Database postgres,mysql,sqlite(defaulted to sqlite)
 #DB_TYPE=postgres 
 #DB_NAME=pg
 #DB_DSN=postgres:strongPass@localhost:5444
 
-# SMTP
-SMTP_EMAIL=example@gmail.com
-SMTP_PASS=***********
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-
 
 # docker run --name postgres -p 5444:5432 -e "POSTGRES_PASSWORD=strongPass" -e "POSTGRES_DB=DB_NAME" -d postgres:latest
 # docker run --name mysql -p 3333:3306 -e "MYSQL_DATABASE=db" -e "MYSQL_USER=test" -e "MYSQL_PASSWORD=strongPass" -e "MYSQL_ROOT_PASSWORD=rootPass" -d  mysql:latest
+# cockroach start-single-node --insecure --listen-addr 127.0.0.1
